src/syntax_analysis/expression/pratt_parsing/infix_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__pratt_parsing__infix_expression__tests__test_syntax_analysis_for_infix_expression_case3.snap
---
source: src/syntax_analysis/expression/pratt_parsing/infix_expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap())"
---
Ok(
    [
        Expression {
            expression: Infix {
                left_hand: Integer {
                    literal: 3,
                },
                operator: Multiply,
                right_hand: Integer {
                    literal: 4,
                },
            },
        },
    ],
)
