src/syntax_analysis/expression/pratt_parsing/infix_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__pratt_parsing__infix_expression__tests__test_syntax_analysis_for_infix_expression_case7.snap
---
source: src/syntax_analysis/expression/pratt_parsing/infix_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        Expression {
            expression: Infix {
                left_hand: Infix {
                    left_hand: Integer {
                        integer_token: Integer {
                            literal: "10",
                        },
                    },
                    operator_token: Divide,
                    right_hand: Integer {
                        integer_token: Integer {
                            literal: "5",
                        },
                    },
                },
                operator_token: Plus,
                right_hand: Integer {
                    integer_token: Integer {
                        literal: "1",
                    },
                },
            },
        },
    ],
    syntax_parsing_errors: [],
}
