src/syntax_analysis/expression/pratt_parsing/infix_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__pratt_parsing__infix_expression__tests__test_syntax_analysis_for_infix_expression_case8.snap
---
source: src/syntax_analysis/expression/pratt_parsing/infix_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        EXPRESSION {
            expression: INFIX {
                left_hand: INFIX {
                    left_hand: INTEGER {
                        integer_token: Integer {
                            literal: "10",
                        },
                    },
                    operator_token: GreaterThan,
                    right_hand: INTEGER {
                        integer_token: Integer {
                            literal: "5",
                        },
                    },
                },
                operator_token: Equals,
                right_hand: BOOLEAN {
                    boolean_token: True,
                },
            },
        },
    ],
    syntax_parsing_errors: [],
}
